@@ -15,15 +15,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<properties>
 		<commons-lang3.version>3.8</commons-lang3.version>
 		<swagger.version>2.9.2</swagger.version>
-		<skipTests>false</skipTests>
-		<skipITs>${skipTests}</skipITs>
-		<skipUTs>${skipTests}</skipUTs>
+		<maven.failsafe.plugin.version>2.22.0</maven.failsafe.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
@@ -97,11 +95,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<skipTests>${skipTests}</skipTests>
-					<skipITs>${skipITs}</skipITs>
-				</configuration>
+				<version>${maven.failsafe.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>integration-tests</id>
@@ -109,19 +103,8 @@
 							<goal>integration-test</goal>
 							<goal>verify</goal>
 						</goals>
-						<configuration>
-							<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
-						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<skipTests>${skipUTs}</skipTests>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
